fix: spacing between and z-index over modal

--- a/modal.css
+++ b/modal.css
@@ -204,8 +204,8 @@ main {
   display: none;
   position: absolute;
   overflow: hidden;
-  padding: 5% 0;
-  z-index: 1;
+  padding: 8rem 0;
+  z-index: 1002;
   left: 0;
   top: 0;
   width: 100%;
